# MyEcoSystem

./: .gitignore  CMakeLists.txt  Makefile  MyEcoSystem  README.md  imgui.ini
include/: Brain.h  Carnivore.h  Creature.h  DNA.h  Environment.h  Herbivore.h  MathUtils.h  Plant.h  UIManager.h
src/: main.cpp
src/Creature/: Brain.cpp  Brain.h  Carnivore.cpp  Creature.cpp  DNA.cpp  Herbivore.cpp
src/UI/: UIManager.cpp
src/Utils/: MathUtils.cpp
src/World/: Environment.cpp  Plant.cpp
